AIC | 0.4 | new Actions Registry

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <title>Axie Infinity Calculator</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
+
 <body>
     <div class="container">
         <div class="container__roundCounter">
@@ -76,9 +79,22 @@
                 <li><a href="table-slp.html">Tabla de producción</a></li>
             </ul>
         </nav>
+
+        <div class="container__history">
+            <table>
+                <tr>
+                    <th>Ronda <i class="fas fa-stopwatch"></i></th>
+                    <th>Energia <i class="fas fa-bolt"></i></th>
+                    <th>Gana <i class="fas fa-plus"></i></th>
+                    <th>Gasta <i class="fas fa-minus"></i></th>
+                    <th>Robas/Destruyes <i class="fas fa-ban"></i></th>
+                </tr>
+            </table>
+        </div>
     </div>
 
     <div class="background-image"></div>
     <script src="script.js"></script>
 </body>
+
 </html>
