Added modal to main page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,36 @@
         </div>
     </div>
 
-    <div class="background-image"></div>
+    <div class="index__modal" id="indexModal">
+        <div class="index__modal__content">
+            <h1 class="mt-2">Axie Infinity Tools</h1>
+            <p class="mt-1">
+                Bienvenido a Axie Infinity Tools, una <b>web app</b>
+                enfocada para principiantes (y no tan principiantes), en Axie Infinity.
+            </p>
+            <h3 class="mt-1">Te puede interesar:</h3>
+            <p class="mt-1">
+                Antes de continuar, me gustaría contarte que esto
+                es un proyecto que aún sigue en curso y recibe constantes cambios. Creado por un <b>desarrollador web Junior</b>.
+                Puedes dar consejos o sugerencias para mejorar haciendo click <a href="https://github.com/thestuckboy/Axie-Infinity-Tools/issues">aquí</a>.
+            </p>
+
+            <h3 class="mt-1">Apoyar</h3>
+            <p class="mt-1">
+                Si las herramientas presentadas te han parecido útiles o simplemente te gustaría apoyar este proyecto. Puedes donar a las siguientes plataformas:
+            </p>
+
+            <ul class="mt-1">
+                <li>
+                    <span class="paypal"><i class="fab fa-cc-paypal"></i></span>
+                    <span class="platform-data">josmanueljsg@gmail.com</span>
+                </li>
+            </ul>
+            <div class="modal__close mt-1" close-modal="indexModal">
+                <i class="fas fa-times-circle"></i>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
