--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    <div class="index__modal" id="indexModal">
+    <!-- <div class="index__modal" id="indexModal">
         <div class="index__modal__content">
             <h1 class="mt-2">Axie Infinity Tools</h1>
             <p class="mt-1">
@@ -122,7 +122,7 @@
                 <i class="fas fa-times-circle"></i>
             </div>
         </div>
-    </div>
+    </div> -->
     <script src="script.js"></script>
 </body>
 
